package personnages.equipements.armes;

public class Arbalete extends Arme{

    public Arbalete() {
        super("Arbalète légère", 8, 16);
    }
}
