package personnages.equipements.armes;

public class Arc extends Arme{

    public Arc() {
        super("Arc court", 6, 16);
    }
}
