package personnages.equipements.armes;

public class Baton extends Arme{

    public Baton() {
        super("Bâton", 6, 1);
    }
}
