package personnages.equipements.armes;

public class EpeeLongue extends Arme{

    public EpeeLongue() {
        super("Épée longue", 8, 1);
    }
}
