package personnages.equipements.armes;

public class Fronde extends Arme{

    public Fronde() {
        super("Fronde", 4, 6);
    }
}
