package personnages.equipements.armes;

public class Masse extends Arme{

    public Masse() {
        super("Masse d'armes", 6, 1);
    }
}
