package personnages.equipements.armes;

public class Rapiere extends Arme{

    public Rapiere() {
        super("Rapière", 8, 1);
    }
}
