package personnages.equipements.armures;

public class ArmureEcailles extends Armure{

    public ArmureEcailles() {
        super("Armure d'écailles", 9, false);
    }
}
