package personnages.equipements.armures;

public class CotteDeMailles extends Armure{

    public CotteDeMailles() {
        super("Cotte de mailles", 11, true);
    }
}
