package personnages.equipements.armures;

public class DemiPlate extends Armure{

    public DemiPlate() {
        super("Demi-plate", 10, false);
    }
}
