package personnages.equipements.armures;

public class Harnois extends Armure{

    public Harnois() {
        super("Harnois", 12, true);
    }
}
