package personnages.races;

public class Elf extends Race{

    public Elf() {
        super("Elf", 0, 0, 6, 0, 0);
    }
}
