package personnages.races;

public class Halfelin extends Race{

    public Halfelin() {
        super("Halfelin", 0, 0, 4, 2, 0);
    }
}
