package personnages.races;

public class Humain extends Race{

    public Humain() {
        super("Humain", 2, 2, 2, 2, 2);
    }
}
