package personnages.races;

public class Nain extends Race{

    public Nain() {
        super("Nain", 0, 6, 0, 0, 0);
    }
}
